<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_light_white"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context="MainActivity">
    <!-- In the HelloAndroid Project i used two different layout version:
        Portrait version uses LinearLayout with Image and Text views



    -->
    <!-- In this Project i used two view versions: Portrait and LandScape.
    -->
    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_margin="16dp"
        android:layout_weight="5"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logodesc"
        android:scaleType="centerInside"
        android:src="@drawable/udacity_logo_2" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:fontFamily="monospace"
        android:text="@string/frase1"
        android:textAlignment="center"
        android:textColor="@color/material_blue_900"
        android:textSize="@dimen/textsize_large"
        android:textStyle="bold"
        android:typeface="sans"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0"
        android:drawableLeft="@drawable/icons8_home_48"
        android:drawablePadding="@android:dimen/app_icon_size"
        android:drawableStart="@drawable/icons8_home_48"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/name"
        android:textColorLink="@color/material_blue_900"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0"
        android:autoLink="map"
        android:drawableLeft="@drawable/icons8_map_marker_48"
        android:drawablePadding="@android:dimen/app_icon_size"
        android:drawableStart="@drawable/icons8_map_marker_48"
        android:paddingHorizontal="8dp"
        android:text="@string/address"
        android:textColorLink="@color/material_blue_900"
        android:textSize="18sp"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0"
        android:autoLink="phone"
        android:drawablePadding="@android:dimen/app_icon_size"
        android:drawableStart="@drawable/icons8_phone_48"
        android:paddingHorizontal="8dp"
        android:text="@string/phone"
        android:textColorLink="@color/material_blue_900"
        android:textSize="26sp"
        tools:ignore="RtlCompat"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0"
        android:autoLink="web"
        android:drawableLeft="@drawable/icons8_website_48"
        android:drawablePadding="@android:dimen/app_icon_size"
        android:drawableStart="@drawable/icons8_website_48"
        android:paddingHorizontal="8dp"
        android:text="@string/website"
        android:textColorLink="@color/material_blue_900"
        android:textSize="26sp"
        tools:targetApi="o" />
</LinearLayout>